--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="jumbotron">
       <h1>Victor Guery</h1>
       <p class="lead">Social Media Marketer</p>
-      <img src="/Profile.JPG"> 
+      <img src="Profile.JPG"> 
       <h2>About Me:</h2>
       <h3>I am currently in my second year at the John Molson School of Business majoring in Marketing with a minor in Data Intelligence. I aspire to work for an ambitious company who strives to reshape marketing with innovative technologies and utilize my strong analytical, technical, and interpersonal skills to promote sustainability in the business world.</h3>
     </div>
