--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 <div id="skillcontainer">
 <div class="container">
 	<h2>Skills</h2>
-	<p>Website Development: HTML, CSS, Jave Script</p>
+	<p>Website Development: HTML, CSS, Java Script</p>
 	<p>Abode Products: Photoshop, InDesign, Illustator</p>
 	<p>Statistical Software: SPSS, R</p>
 </div>
